# InitServer

./: CMakeLists.txt  README.md
InitClient/: InitClient.cpp  InitClient.h
InitServer/: CMakeLists.txt  InitServer.cpp  InitServer.h
common/: Connection.cpp  Connection.h
